FILE (GLOB_RECURSE core_SOURCES *.cpp *.hpp)

# Include bison and flex
FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX  REQUIRED)

BISON_TARGET(KiwiParser ${CMAKE_CURRENT_SOURCE_DIR}/lang/parser.yy  ${CMAKE_CURRENT_SOURCE_DIR}/lang/parser.cpp VERBOSE ${PROJECT_BINARY_DIR}/parser.log)
FLEX_TARGET(KiwiScanner ${CMAKE_CURRENT_SOURCE_DIR}/lang/scanner.ll ${CMAKE_CURRENT_SOURCE_DIR}/lang/scanner.cpp)
ADD_FLEX_BISON_DEPENDENCY(KiwiScanner KiwiParser)

LIST(REMOVE_ITEM core_SOURCES "lang/scanner.cpp")
LIST(REMOVE_ITEM core_SOURCES "lang/parser.cpp")
LIST(REMOVE_ITEM core_SOURCES "lang/parser.hpp")
SET (core_SOURCES ${core_SOURCES} ${BISON_KiwiParser_OUTPUTS} ${FLEX_KiwiScanner_OUTPUTS})

SET (core_LIBS ${Boost_LIBRARIES} ${ICU_LIBRARIES} ${Log4Cxx_LIBRARIES} ${LLVM_LIBRARIES} "${PROJECT_NAME}-runtime")
SET (core_LIB "lib${PROJECT_NAME}")

# Remove no exception from LLVM flags
STRING(REPLACE "-fno-exceptions" "" LLVM_CXXFLAGS ${LLVM_CXXFLAGS})

ADD_LIBRARY(${core_LIB} SHARED ${core_SOURCES})
TARGET_LINK_LIBRARIES(${core_LIB} ${core_LIBS})
SET_TARGET_PROPERTIES(
    ${core_LIB} PROPERTIES
    VERSION             "${KIWI_VERSION_MAJOR}.${KIWI_VERSION_MINOR}"
    OUTPUT_NAME         ${PROJECT_NAME}
    CLEAN_DIRECT_OUTPUT 1
    COMPILE_FLAGS       ${LLVM_CXXFLAGS}
    LINK_FLAGS          ${LLVM_CXXFLAGS}
)

INSTALL(TARGETS ${core_LIB} DESTINATION lib)